# advent-of-code

1/: 1.py  2.py
2/: 1.py  2.py
2020/1/: 1.py
2020/2/: 1.py
2020/3/: 2.py
2021/: pyproject.toml
2021/1/: depth.py  depth_sliding_window.py
2021/2/: drive.py  drive_advanced.py
2022/1/: 1.rs  part2.rs
2022/2/: 1.rs  2.rs
2022/3/: 1.rs  2.rs  test.rs
3/: 1.py
