[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = ""
authors = ["Lucas Vasconcelos <lucas@vscncls.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
